fix scrollbar appearing in banner on safari

--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -20,6 +20,7 @@
   scroll-behavior: smooth;
   padding-top: 2.5rem;
   margin-top: -2.5rem;
+  overflow-x: hidden;
 }
 
 .banner__title-text {
